<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Treinamento</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="minha_primeira_imagem">Minha Primeira Imagem</string>
    <string name="meu_botao">Meu Botão</string>
    <string name="voc_clicou_na_posicao">Você clicou na posição: %d</string>
    <string name="voce_clicou_no_nome">voce clicou no nome: %s</string>
    <string name="title_activity_contato">ContatoActivity</string>
    <string name="novo">Novo</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="site">Site</string>
    <string name="telefone">Telefone</string>
    <string name="salvar">Salvar</string>

</resources>
